[gd_scene load_steps=8 format=2]

[ext_resource path="res://EnemyGun.gd" type="Script" id=1]
[ext_resource path="res://Player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 192.0

[sub_resource type="CircleShape2D" id=4]
radius = 320.0

[sub_resource type="CircleShape2D" id=5]
radius = 448.071

[node name="EnemyGun" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.329412, 0.0666667, 0.905882, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource( 3 )

[node name="PlayerShootingRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShootingRange"]
shape = SubResource( 4 )

[node name="BeginMoveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeginMoveArea"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_exited"]
[connection signal="body_entered" from="PlayerShootingRange" to="." method="_on_PlayerShootingRange_body_entered"]
[connection signal="body_exited" from="PlayerShootingRange" to="." method="_on_PlayerShootingRange_body_exited"]
[connection signal="body_entered" from="BeginMoveArea" to="." method="_on_BeginMoveArea_body_entered"]
[connection signal="body_exited" from="BeginMoveArea" to="." method="_on_BeginMoveArea_body_exited"]
